; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_pack-objects.c_show_object__ma_allow_any.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_pack-objects.c_show_object__ma_allow_any.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object = type { i32 }

@arg_missing_action = common dso_local global i64 0, align 8
@MA_ALLOW_ANY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.object*, i8*, i8*)* @show_object__ma_allow_any to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_object__ma_allow_any(%struct.object* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.object*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.object* %0, %struct.object** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i64, i64* @arg_missing_action, align 8
  %8 = load i64, i64* @MA_ALLOW_ANY, align 8
  %9 = icmp eq i64 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.object*, %struct.object** %4, align 8
  %13 = getelementptr inbounds %struct.object, %struct.object* %12, i32 0, i32 0
  %14 = call i32 @has_object_file(i32* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %3
  br label %22

17:                                               ; preds = %3
  %18 = load %struct.object*, %struct.object** %4, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @show_object(%struct.object* %18, i8* %19, i8* %20)
  br label %22

22:                                               ; preds = %17, %16
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @has_object_file(i32*) #1

declare dso_local i32 @show_object(%struct.object*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
